--- a/Calculatorstyles.css
+++ b/Calculatorstyles.css
@@ -1,109 +1,152 @@
-*{
-    padding:0;
-    margin:0;
-    box-sizing: border-box;    
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
-body{
-    background-color: #dbf0b9ce;
-    max-height:min-content;
+body {
+  background-color: #ff972f;
+  max-height: min-content;
 }
-.container{
-    
-    display: flex;
-    align-items: center;
-    justify-content: center;  
-    display: grid;
-    place-items: center;
-    height:100vh;
+.container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  display: grid;
+  place-items: center;
+  height: 100vh;
 }
-.calculator{
-    position: relative;
-    height: auto;
-    width: auto;
-    padding: 15px;
-    border-radius:28px;
-    margin:0 auto;
-    margin:1em;
-    border: #164624 double 6px;
-    max-width:500px;
-    vertical-align: middle;
-    
-background: linear-gradient(145deg, #4eb960, #237a31);
-box-shadow:  10px 10px 25px #03420eda,
-             -10px -10px 25px #eef1cde8;
-    padding-bottom:15px;
+.calculator {
+  position: relative;
+  height: auto;
+  width: auto;
+  padding: 15px;
+  border-radius: 50px;
+  margin: 0 auto;
+  margin: 1em;
+    max-width: 500px;
+  vertical-align: middle;
+
+  background: linear-gradient(145deg, #fff3b0, #fddb1a);
+  box-shadow: 10px 10px 25px #c52d07, -10px -10px 28px #ff821c;
+  padding-bottom: 15px;
 }
-form input{
-    width:60px;
-    height: 60px;
-    border: none;
-    outline: none;
-    border-radius: 50%;
-    background-color: transparent;
-    border-radius: 50%;
-    box-shadow:
-            5px 5px 5px #1a502a,
-             -2px -2px 2px #bbffae5e;
-    margin:4.1px;
-    font-size:22px;
-    color: rgb(229, 255, 186);
-    text-align: center;
-    cursor:pointer;
-    font-family: "Cairo", sans-serif;
-    
-    transition: 200ms ease;
+#keyscase{
+    border: solid rgba(238, 163, 0, 0.171) 0.5px;
+  background: #ffd856;
+  margin: 6px;
+  box-shadow: inset 12px 12px 17px #ffc526c9, inset -11px -11px 19px #ffffe4a9;
+  border-radius: 25px;
+  padding:8px;
+}
+form input {
+  width: 55px;
+  height: 55px;
+  border: none;
+  outline: none;
+  border-radius: 50%;
+  background-color: transparent;
+  border-radius: 50%;  
+  margin: 4px;
+  font-size: 22px;
+  color: rgb(229, 255, 186);
+  text-align: center;
+  cursor: pointer;
+  font-family: "Orbitron", sans-serif;
+
+  transition: 200ms ease;
 }
 form input:active {
-   background-color:#1e6935;
+  background-color: #206936;
 }
-#display{
-    border-radius: 15px;
-    width:275px;
-    height: 90px;
-    border:solid rgba(212, 255, 0, 0) 0.5px;
-    background: #d8ce73;
-    margin:6px;
-    box-shadow: inset 1px 11px 15px #927a10c9,
-                inset -11px -11px 15px #f5f5a8bb;
+#displaycase {
+  border-radius: 30px;
+  width: 279px;
+  height: 120px;
+  background: #ffd856;
+  margin: 6px;
+  box-shadow: inset 12px 12px 17px #ff9812c9, inset -11px -11px 19px #ffffe4a9;
+  margin: 6px;
+  border: double 4px rgba(228, 161, 36, 0.705);
+  position: relative;
+  height: 9em;
+}
+#display {
+  border-radius: 19px;
+  background: #c5b6a3b7;background: rgb(223,193,165);
+  height:65px;
+  border: solid rgba(15, 10, 1, 0.404) 1.6px;
+  box-shadow: inset 16px 16px 32px #6d665c67, inset -16px -16px 32px #ffedd76e;
+  position: absolute;
+  top: 50%;
+  left: 48.5%;
+  transform: translate(-50%, -50%);
+  width:90%;
 }
 
-form .display input{
-    font-family: "Roboto Slab", serif;
-    color: rgb(95, 64, 16);
-    text-align: right;
-    font-size: 36px;
-    letter-spacing:2px;
-    flex:1;
-    padding:3px;
+form .display input {
+  font-family: 'Seven Segment', serif;
+  font-weight: bold;
+  color: rgba(0, 0, 0, 0.788);
+  text-align: right;
+  font-size: 45px;
+  letter-spacing: 2px;
+  flex: 1;
+  padding: 3px;
 }
-.toprow{
-    height:27px;
-    border-radius: 15px;
-    margin-top:25px;
-    margin-bottom: 20px;
-    font-size: 14px;
-    text-align: center;
-    }
-#clr,#del,#equals{
-    background-color: #ec6c16;
-    box-shadow:
-            5px 5px 5px #643408cb,
-             -2px -2px 2px #fc9c645e;
-             transition: 200ms ease;
+footer {
+  font-size: smaller;
+  margin-top: 1em;
+  color: rgb(255, 216, 229);
 }
-#clr:active,#del:active, #equals:active {
-    background-color:#a3490d;
- }
-#zero,#equals{
- width:45%;
- height:55px;
- margin-top:20px;
- border-radius:55px;
- margin-left:7px;
+.lav{
+    background-color: #f1abff;
+    border-radius: 50%;
+    color:#7c117cb9;
+    box-shadow: 5px 5px 5px #ff48d1, -2px -2px 1px #fff0f0e0;  
+    transition: 200ms ease;
+}
+.orange{
+    background-color: #ff8a3c;
+    border-radius: 50%;
+    color:#ffffffe3;
+    box-shadow: 5px 5px 5px #ff6600, -4px -2px 5px #fff5d5e0;  
+    transition: 200ms ease;
+}
 
+.pink{
+    background-color: #ffd4d4;
+    border-radius: 50%;
+    color:#e01e6f;
+    box-shadow: 5px 5px 5px #ff6969, -4px -2px 5px #fff0f0e0;  
+    transition: 200ms ease;
 }
-footer{
-    font-size: smaller;
-    margin-top:1em;
-    color:#1e6935
+
+.yellow{
+    background-color: #fffc63;
+    border-radius: 50%;
+    color:#ff5100d2;
+    box-shadow: 5px 5px 5px #ff8a05, -4px -2px 5px #faffb4e0; 
+    transition: 200ms ease; 
+}
+.blue{
+    background-color: #C9E9D2;
+    border-radius: 50%;
+    color:#1412949a;
+    box-shadow: 5px 5px 5px #19aff5, -3px -4px 5px #fff0f0e0;  
+    transition: 200ms ease;
+}
+.blue:active{
+    background-color: rgb(20, 20, 197);
+}
+.orange:active{
+    background-color: rgb(194, 45, 0);
+}
+.lav:active{
+    background-color: rgb(193, 27, 199);
+}
+.yellow:active{
+    background-color: rgb(255, 153, 0);
+}
+.pink:active{
+    background-color: rgb(255, 113, 113);
 }
